k8s/zabbix-init-simple.yaml
apiVersion: v1
kind: Pod
metadata:
  name: zabbix-schema-init
  namespace: zabbix
spec:
  restartPolicy: Never
  containers:
  - name: zabbix-init
    image: zabbix/zabbix-server-mysql:6.0-alpine-latest
    command: 
    - /bin/bash
    - -c
    - |
      [...]
